# Danus

./: .gitignore  .mcp.json  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  LICENSE  OPERATOR.md  README.md  pyproject.toml
.claude/skills/consult/: SKILL.md
.claude/skills/elaboration/: SKILL.md
.claude/skills/human-summary/: SKILL.md  doctor.sh  md2html.js  package.json  render_pdf.sh
.claude/skills/initialize/: SKILL.md
.claude/skills/write-paper/: README.md  SKILL.md
.github/workflows/: ci.yml
agents/contracts/: README.md  main_agent.md  verifier.md  worker.md
config/: codex.env.example  danus.env.example  latex-git.env.example
danus/: __init__.py  codex.py
danus/authoring/: __init__.py  common.py  driver.py
danus/core/: DATA_MODEL.md  INTERFACES.md  README.md  __init__.py  _util.py  bm25.py  factgraph.py  global_memory.py  glossary.py  glossary_global.json  local_memory.py  schema.py
danus/execution/: README.md  __init__.py  __main__.py  layout.py  loop.py  scaffold.py
danus/gateway/: README.md  __init__.py  __main__.py  roles.py  server.py
danus/human_summary/: __init__.py  __main__.py  assemble.py  server.py
danus/integrations/: README.md  __init__.py  matlas.py
danus/observability/: README.md  __init__.py  __main__.py  app.py
danus/orchestration/: README.md  __init__.py  __main__.py  cli.py
danus/strategy/: README.md  __init__.py  __main__.py  cli.py  config.py  ledger.py  transport.py
danus/tests/: __init__.py  test_codex.py  test_codex_env.py
danus/verify/: README.md  __init__.py  __main__.py  launcher.py  prechecks.py  service.py
danus/write_paper/: __init__.py  __main__.py  assemble.py  paper_chunked.py  paper_math_verify.py  server.py
docs/: cli-and-tools.md  concepts.md  configuration.md  getting-started.md  operating-guide.md  operations.md  security-and-trust.md
examples/: README.md
examples/ops/: main-agent-tmux.sh  strategy-loop.sh  watchdog.sh
examples/project/: PROBLEM.md
scripts/: bootstrap.sh  check-codex.sh  doctor.sh  env.sh  install-tex.sh  recover.sh  services.sh  setup-codex.sh  start-dashboard.sh  start-verify.sh
(+97 files in other folders)
